chore: Eliminate exports and add-opens java.base/jdk.internal.loader=ALL-UNNAMED from jvmargs